dredd e2e testing fixes, PR feedback changes/fixes
